🔧 [UPDATE] modified vcxproj files

--- a/MiMotor.vcxproj.filters
+++ b/MiMotor.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="Sprite.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
   </ItemGroup>
 </Project>
