--- a/MiMotor.vcxproj
+++ b/MiMotor.vcxproj
@@ -134,14 +134,21 @@
   <ItemGroup>
     <ClCompile Include="Error.cpp" />
     <ClCompile Include="GLSProgram.cpp" />
+    <ClCompile Include="ImageLoader.cpp" />
+    <ClCompile Include="IOManager.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="MiMotor.cpp" />
+    <ClCompile Include="picoPNG.cpp" />
     <ClCompile Include="Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Error.h" />
     <ClInclude Include="GLSProgram.h" />
+    <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="ImageLoader.h" />
+    <ClInclude Include="IOManager.h" />
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="picoPNG.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
